# hexagonal-rust

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: dto.rs  handlers.rs  main.rs  response.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/core/: core.rs  mod.rs
lib/src/driven/: adapter.rs  mod.rs
lib/src/driving/: adapter.rs  mod.rs
