[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexagonal.workspace = true
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
poem = "3.0.1"
serde_json.workspace = true
serde.workspace = true
poem-openapi = { version = "5.0.2", features = ["swagger-ui"] }
chrono.workspace = true
